# juntos

./: .gitignore  .gitmessage  Cargo.toml  Makefile  README.md
.cargo/: config
bochs/: bochs.x86_64
grub/: grub.cfg
src/: bochs.rs  kalloc.rs  lib.rs  panic.rs  print.rs  vga.rs
src/_arch/aarch64/: aarch64.json  linker.ld
src/_arch/aarch64/asm/: boot.s
src/_arch/x86_64/: linker.ld
src/_arch/x86_64/asm/: boot.s  long_mode.s  multiboot2_header.s
src/arch/: mod.rs
src/arch/x86_64/: linker.ld  mod.rs  x86_64.json
src/arch/x86_64/asm/: boot.s  long_mode.s
src/arch/x86_64/gdt/: gdt.rs  mod.rs  tss.rs
src/arch/x86_64/instructions/: mod.rs  tlb.rs
src/arch/x86_64/instructions/registers/: control.rs  mod.rs  segmentation.rs
src/arch/x86_64/interrupt/: idt.rs  mod.rs
src/arch/x86_64/interrupt/handler/: exception.rs  mod.rs
src/arch/x86_64/paging/: addr.rs  mapper.rs  mod.rs  table.rs
src/memory/: bitmap.rs  bump.rs  mod.rs
src/multiboot/: mod.rs
src/multiboot/tag/: elf_symbols.rs  memory_map.rs  mod.rs
src/utils/: mod.rs
